ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: myservice.info
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myservice
            port:
              number: 8080
      - pathType: Prefix
        path: /v2
        backend:
          service:
            name: myservice2
            port:
              number: 8080
